# atheneum

./: README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
src/: .gitignore  CMakeLists.txt
src/include/atheneum/: atheneum.h
src/lib/: CMakeLists.txt  atheneum.c
